fix social share icons alignment

--- a/app/assets/stylesheets/ontologies.scss
+++ b/app/assets/stylesheets/ontologies.scss
@@ -111,6 +111,9 @@ $widget-table-border-color: #EFEFEF;
 .ont-section-toolbar {
   display: flex;
   align-items: center;
+  svg{
+    fill: var(--primary-color);
+  }
 }
 
 .ont-metadata-card {
